Hornet-Discrepancias (0.8.6) -Se unen componentes de menu a esquinaUsuario -Barra menu pasa a position: fixed -Tabla en muestraDB.css se le da un z-index: 0, para evitar transparencia de botones de layout. -Se ajusta tabla mas a la izquierda y abajo, cuando esta en Responsive. -Se modifica tamaño de select e input [text] de tabla mientras esta en Responsive. -Tamaño de botones de layout al 80% despues de los 500px (Responsive) -Fondo de layout despues de los 500px pasa de transparente a blanco. -Se omite columna en tabla de muestraDB.tsx mediante un display: none de una clase añadida dependiendo de window.innerWidth < 500.

--- a/src/components/stylesheets/esquinaUsuario.css
+++ b/src/components/stylesheets/esquinaUsuario.css
@@ -87,3 +87,83 @@
         margin: 20px 50px;
     }
 }
+
+/* Menu */
+
+.barra-menu {
+    border: 5px solid linear-gradient(to right, #2179acfd, transparent);
+    background: linear-gradient(to right, #2179acfd, transparent);
+    position: fixed;
+    top: 106px;
+    height: 100%;
+    width: 280px;
+    z-index: 5000;
+    left: 0px;
+}
+.botonLogout {
+    display: block;
+    width: 180px;
+    bottom: 20px;
+    height: auto;
+    left: 60px;
+    /* border-radius: 15px; */
+    position: fixed;
+    margin: auto;
+    text-align: center;
+    z-index: 500000;
+
+}
+.botonLista {
+    display: block;
+    width: 180px;
+    height: auto;
+    top: 200px;
+    left: 60px;
+    /* border-radius: 15px; */
+    position: fixed;
+    margin: auto;
+    text-align: center;
+    z-index: 500000;
+
+}
+.botonHome {
+    display: block;
+    width: 180px;
+    height: auto;
+    top: 130px;
+    left: 60px;
+    /* border-radius: 15px; */
+    position: fixed;
+    margin: auto;
+    text-align: center;
+    z-index: 500000;
+}
+.botonUpdate {
+    display: block;
+    width: 180px;
+    height: auto;
+    top: 270px;
+    left: 60px;
+    /* border-radius: 15px; */
+    position: fixed;
+    margin: auto;
+    text-align: center;
+    z-index: 5000000;
+}
+
+/* clases de css en componente padre afectan a componente hijo */
+@media screen and (max-width: 500px) {
+    .esquina-usuario {
+        width: 100%;
+        left: 0px;
+        background: linear-gradient(to right, #2179acfd, white);
+    }
+    .barra-menu {
+        width: 100%;
+        left: 0px;
+        background: linear-gradient(to right, #2179acfd, white);
+    }
+    .barra-menu button {
+        width: 80%;
+    }
+}
