--- a/src/components/stylesheets/muestraDB.css
+++ b/src/components/stylesheets/muestraDB.css
@@ -5,12 +5,15 @@
     display: none;
 } */
 .tabla{
+    scale: 0.85;
     margin: 0 40px;
+    top: 20px;
     position: relative;
     width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
     overflow: hidden;
+    z-index: 0;
 }
 .expandable-component{
     display: flex;
@@ -21,11 +24,25 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+
 }
 .tabla select {
-    width: 200px;
+    width: 110px;
 }
 .tabla input[type="text"]{
     width: 300px;
     margin-right: 20px;
+}
+
+@media screen and (max-width: 500px) {
+    .tabla{
+        top: 35px;
+        left: -50px;
+    }
+    .tabla input[type="text"]{
+        width: 200px;
+    }
+    .ocultar-columna {
+        display: none;
+    }
 }
